[package]
name = "argparse-rs"
version = "0.1.0"
authors = ["Maksim Dzerkach <maksim.dzerkach@gmail.com>", "Mark Sinclair <mark.edward.x@gmail.com>"]

description = "A simple argument parser, meant to parse command line input. It is inspired by the Python ArgumentParser"
repository = "https://github.com/MD-Levitan/argparser-rs"
keywords = ["terminal", "argument", "parsing", "argparser"]

readme = "README.md"
license = "MIT"

